--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ project(GF_META_BUILD
 
 add_subdirectory(gf-tools)
 add_subdirectory(gf-box2d)
+add_subdirectory(gf-chipmunk)
 add_subdirectory(gf-imgui)
 
 # games
